[middleware-coreengine] Column name changes for audit, memo, mapping and country config issue fixes in getCountries.